--- a/sketchpadJs/style.css
+++ b/sketchpadJs/style.css
@@ -1,18 +1,54 @@
-h2 {
+body {
+	background-color: #FCFFF2;
+}
+
+
+h2, h4 {
 	text-align: center;
 }
 
-#clear {
+#options {
+	position: fixed;
+	width: 210px;
+	height: 300px;
+	border: 1px solid black;
+	margin-left: 100px;
+	padding: 10px;
+	background-color: white;
+}
+
+button {
 	display: block;
 	margin: auto;
 }
 
+p {
+	text-align: center;
+	margin-bottom: 0px;
+}
+
+
+.colorPicker, .hint {
+	font-size: 0.7em;
+	line-height: 5px;
+}
+
+.hint {
+	margin-top: 5px;
+	line-height: 10px;
+}
+
+#clear {
+	position: absolute;
+	bottom: 10px;
+	left: 90px;
+}
+
 .container {
-
-	width: 500px;
-	height: 500px;
+	width: 550px;
+	height: 550px;
 	margin: 10px auto;
-
+	background-color: #fff;
 }
 
 ul {
@@ -23,8 +59,6 @@ ul {
 
 li {
 	display: inline-block;
-	/* border: 1px solid red; */
-	background-color: green;
 	margin: 0;
 	padding: 0;
 }
